# Scraping-script-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  docker-compose.yml  pyproject.toml
agent/: graph.py  state.py
agent/llm/: client.py  codeformat.py
agent/memory/: store.py
agent/models/: evidence.py  job_record.py  network.py  trace.py  validation.py
agent/nodes/: __init__.py  discover.py  docker_execute.py  evidence_check.py  failure_diagnosis.py  finalize.py  generate_script.py  investigate.py  repair_strategy.py  validate.py
agent/sandbox/: Dockerfile  entrypoint.sh
agent/tools/: fetch_url.py  firecrawl_client.py  probe_endpoint.py  sandbox.py  search_web.py  validator.py
agent/trace/: sink.py
generated_scripts/browserstack.com/: cost_report.json  output.jsonl  scraper.py
generated_scripts/cognizant.com/: cost_report.json  scraper.py
generated_scripts/f22labs.com/: confidence.json  cost_report.json  output.jsonl  scraper.py
generated_scripts/freshworks.com/: cost_report.json  output.jsonl  scraper.py
generated_scripts/infosys.com/: confidence.json  cost_report.json  output.jsonl  scraper.py
generated_scripts/paytm.com/: scraper.py
generated_scripts/razorpay.com/: confidence.json  cost_report.json  output.jsonl  scraper.py
generated_scripts/simplyhired.co.in/: cost_report.json
scripts/: run_agent.py
tests/: test_graph_routing.py
tests/test_memory/: test_store.py
tests/test_models/: test_evidence.py  test_job_record.py  test_network.py  test_trace.py  test_validation.py
tests/test_nodes/: test_discover.py  (+1 more)
(+12 files in other folders)
