[project]
name = "job-scraper-agent"
version = "0.1.0"
description = "AI agent that writes job-scraper scripts"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2",
    "python-dotenv>=1",
    "playwright>=1.45",
    "httpx>=0.27",
    "lxml>=5",
    "cssselect>=1.2",
    "jmespath>=1.0",
    "python-dateutil>=2.9",
    "pycountry>=24.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.8",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["agent*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
